fixed slightly off centered header spacing

--- a/src/SASS/Header.scss
+++ b/src/SASS/Header.scss
@@ -15,6 +15,7 @@
   border: none;
   background: none !important;
   margin-right: 0 !important;
+  padding: 0px !important;
 
   i {
     color: #0074d9;
